PRL-3556 - Send and Reply upgrade - Callbacks to fetch Reference Data, Hearing Details for Send and Reply event
- fixed for sonar issues.
- Added junit for new methods.